Patch 6: Updated panels